--- a/frontend/src/Components/Moviecard/Moviecard.css
+++ b/frontend/src/Components/Moviecard/Moviecard.css
@@ -1,16 +1,11 @@
-.movie-card
-{
+.movie-card {
     width: 20%;
     height: 40%;
-   margin-top: 3%;
-   margin-left: 2%;
-   
+    margin-top: 3%;
 }
-.movie-poster > img 
-{
+
+.movie-poster>img {
     height: 25em;
     width: 15em;
     border-radius: 10px;
-    
 }
- 
