--- a/frontend/src/Pages/Moviedetails/Moviedetails.css
+++ b/frontend/src/Pages/Moviedetails/Moviedetails.css
@@ -1,67 +1,57 @@
-.moviedetails-cover 
-{
+.moviedetails-cover {
     width: 100%;
     height: 30em;
     z-index: -1;
-    background-image:   linear-gradient(90deg, rgba(28,32,32,1) 31%, rgba(25,31,31,0.3113620448179272) 70%), url("https://www.content.numetro.co.za/image_resized_files/6632-2-2-10-1723533842.jpg");
-     background-size: contain;
+    background-image: linear-gradient(90deg, rgba(28, 32, 32, 1) 31%, rgba(25, 31, 31, 0.3113620448179272) 70%), url("https://www.content.numetro.co.za/image_resized_files/6632-2-2-10-1723533842.jpg");
+    background-size: contain;
 }
 
-
-.moviedetails-poster > img 
-{  
-  
+.moviedetails-poster>img {
     height: 25em;
     width: 16em;
     border-radius: 10px;
 }
-.moviedetails-movie-info 
-{
+
+.moviedetails-movie-info {
     display: flex;
     flex-direction: row;
     align-items: center;
-
     position: relative;
     left: 5%;
     top: 5%;
     width: 90%;
-    
-
- 
 }
 
-.movieinfo-rating
-{
+.movieinfo-rating {
     width: 15em;
     height: 1em;
     background-color: #323332;
     text-align: center;
-  border-radius: 10px;
- color: white;
- margin-top: 5%;
- margin-bottom: 5%;
- padding: 1em;
+    border-radius: 10px;
+    color: white;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    padding: 1em;
 }
-.movie-language
-{
+
+.movie-language {
     display: flex;
 }
-.d
-{
-    background-color: gainsboro;
-    max-width:10em ;
-    padding: 2%;
 
+.d {
+    background-color: gainsboro;
+    max-width: 10em;
+    padding: 2%;
 }
-.language
-{
+
+.language {
     background-color: gainsboro;
     margin-left: 5%;
-    max-width:10em ;
+    max-width: 10em;
     padding: 2%;
 }
-.moviedetails-book > button
-{
+
+.moviedetails-book>button {
     background-color: #f84565;
     border: none;
     outline: none;
@@ -69,27 +59,24 @@
     height: 4em;
     color: white;
     border-radius: 10px;
-} 
-.movie-info-right
-{
+}
+
+.movie-info-right {
     margin-left: 3%;
 }
-.movieinfo-moviename
-{
+
+.movieinfo-moviename {
     color: white;
     font-size: 20px;
     font-weight: bold;
 }
-.m-info
-{
+
+.m-info {
     color: white;
-    margin-top: 5%; 
+    margin-top: 5%;
     margin-bottom: 10%;
 }
 
-.reviews
-{
-    display: flex;
-  
-    
+.reviews {
+    display: grid;
 }
